gw2worlds/css/index.css
body {
  background-color: #0f0f0f;
  color: #f1f1f1;
  font-family: monospace;
  font-size: 14px;
}

#top {
  position: sticky;
  top: 0;
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
  background-color: #0f0f0f;
  height: 2em;
  width: 100%;
  display: flex;
  align-items: center;
  padding: 0 .75em;
}

#select-region,
#select-world,
#select-sort,
#search-guild {
  background-color: #0f0f0f;
  color: #f1f1f1;
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 0;
}

#select-world {
  min-width: 200px;
}

#search-guild {
  padding-left: .3em;
}

#select-region:focus,
#select-world:focus,
#search-guild:focus,
#select-sort:focus {
  outline: none;
}

#search-guild:focus {
  border: 1px solid rgba(255, 255, 255, 0.3);
}

#world,
#search,
#sort {
  margin-left: 1em;
}

#last-fetched {
  margin-left: auto;
  color: #ccc;
  font-size: .9em;
}

#landing {
  margin: .75em;
}

#landing > #title {
  margin: 0;
}

#landing #description {
  font-weight: normal;
  margin-top: 0;
  color: #ccc;
  font-size: 1em;
}

#title-highlight {
  color: #f56991;
}

#stats {
  margin: 2em .75em;
}

#stats p {
  margin: .5em 0;
}

#stats sup {
  color: #aaa;
}

#stats #footnotes {
  color: #aaa;
}

#results {
  margin: .75em;
}

.result {
  margin-bottom: .1em;
}

#result-legend {
  margin-bottom: 1em;
}

#result-legend-fail {
  color: salmon;
  font-weight: bold;
}

#results-legend-nothing {
  margin-top: 3em;
  color: #ccc;
}

#results-legend-nothing p {
  margin: .5em 0;
}

#results-legend-nothing > q {
  font-weight: bold;
  font-style: italic;
}

#results-legend-nothing a {
  color: #ccc;
}

#results-legend-nothing a:hover {
  text-decoration: none;
}

#result-query {
  font-weight: bold;
}

.result-world {
  margin-left: .25em;
  color: sandybrown;
  text-decoration: underline;
  cursor: pointer;
}

.result-world:hover {
  text-decoration: none;
}

.result-tag {
  margin-left: .25em;
  color: darkturquoise;
  font-weight: bold;
}

#load-all {
  margin-top: .5em;
  font-size: .9em;
}

#load-all-link {
  text-decoration: underline;
  cursor: pointer;
}

#load-all-link:hover {
  text-decoration: none;
}

#go-to-top {
  display: none; /* Hidden by default */
  position: fixed; /* Fixed/sticky position */
  bottom: 20px; /* Place the button at the bottom of the page */
  right: 30px; /* Place the button 30px from the right */
  z-index: 99; /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  background-color: rgba(255, 255, 255, 0.1); /* Set a background color */
  color: #f1f1f1; /* Text color */
  cursor: pointer; /* Add a mouse pointer on hover */
  padding: 15px; /* Some padding */
  border-radius: 10px; /* Rounded corners */
  font-size: 18px; /* Increase font size */
}

